8252889: Obsolete -XX:+InsertMemBarAfterArraycopy

Reviewed-by: shade, adityam